--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
         If you want to ask me something
     </p>
     <div id="p1">
-        <p>
             <br>
             <image src="https://sweetie.crd.co/assets/images/gallery08/1532250d.gif?v=5a2f82e6"></image>
             <div id="email">
@@ -41,7 +40,11 @@
                 <br>
                 <br>
             </div>
-        </p>
+    </div>
+        <div class="buttons">
+        <a href="credits.html">
+        <button type="submit" id="btn1" style="background-color:rgb(225, 70, 155);  color:beige">credits</button>
+     </a>
     </div>
  <script src="index.js"></script>
 </body>
